--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 
 	<p> You have
-		<span id="replicanti"> 1 </span>
-	replicanti. </p>
+		<span id="replicanti"> 1 </span>replicanti. </p>
 
 	<p>
 		Every second, each replicanti has a <span id="replicateChance"> 10% </span> chance to replicate.
