--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title> Dog Breeds </title>
-    <link rel="icon" type="image/png" href="/dogfavicon.png" />
+    <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
 
 </html>
