--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -5,5 +5,10 @@
     <title> Dog Breeds </title>
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
-
+  <body>
+    <h1 id="main"> The Dog Info Website </h1>
+    <nav id="navigation">
+      <a url="/dogbreedsinfo.html"> About us </a>
+    </nav>
+  </body>
 </html>
