--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -8,7 +8,12 @@
   <body>
     <h1 id="main"> The Dog Info Website </h1>
     <nav id="navigation">
-      <a url="/dogbreedsinfo.html"> About us </a>
+      <a href="/dogbreedsinfo.html"> About us </a>
+      <a href="/dogfood.html"> Sweet Treats for your dog </a>
+      <a href="/doghistory.html"> A history of human / dog friendship </a>
+      <a href="/dogfacts.html"> Random dog facts </a>
     </nav>
+    
+    
   </body>
 </html>
