--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -6,14 +6,16 @@
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
-    <h1 id="main"> The Dog Info Website </h1>
+    <h1 id="main"> The Dog Breeds Website </h1>
     <nav id="navigation">
-      <a href="/dogbreedsinfo.html"> About us </a>
-      <a href="/dogfood.html"> Sweet Treats for your dog </a>
-      <a href="/doghistory.html"> A history of human / dog friendship </a>
-      <a href="/dogfacts.html"> Random dog facts </a>
+      <a href="/dogbreedsinfo.html"> About us </a><br/>
+      <a href="/dogfood.html"> Sweet Treats for your dog </a><br/>
+      <a href="/doghistory.html"> A history of human / dog friendship </a><br/>
+      <a href="/dogfacts.html"> Random dog facts </a><br/>
     </nav>
     
+    <h3> The Bernese Mountain Dogs </h3>
+    <p> The bernse
     
   </body>
 </html>
