--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -15,7 +15,7 @@
     </nav>
     
     <h3> The Bernese Mountain Dogs </h3>
-    <p> The bernse
+    <p> The Bernese Mountain Dog, one of four Sennenhund-type breeds from the swiss alps. </p>
     
   </body>
 </html>
