--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -15,7 +15,7 @@
     </nav>
     
     <h3> The Bernese Mountain Dogs </h3>
-    <p> The <i>Bernese Mountain Dog<i>, one of four Sennenhund-type breeds from the swiss alps. 
+    <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. 
         The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog").
         These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts.
     </p>
