--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -6,18 +6,18 @@
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
-    <h1 id="main"> The Dog Breeds Website </h1>
+    <div id="header"> The Dog Breeds Website </div>
     <nav id="navigation">
-      <a href="/dogbreedsinfo.html"> About us </a><br/>
-      <a href="/dogfood.html"> Sweet Treats for your dog </a><br/>
-      <a href="/doghistory.html"> A history of human / dog friendship </a><br/>
-      <a href="/dogfacts.html"> Random dog facts </a><br/>
+      <a href="/dogbreedsinfo.html"> About us </a>
+      <a href="/dogfood.html"> Sweet Treats for your dog </a>
+      <a href="/doghistory.html"> A history of human / dog friendship </a>
+      <a href="/dogfacts.html"> Random dog facts </a>
     </nav>
     
     <h3> The Bernese Mountain Dogs </h3>
-    <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. 
-        The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog").
-        These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts.
+    <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
+        The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog"). </br>
+        These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts. </br>
     </p>
     
   </body>
