--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,12 +7,18 @@
   </head>
   <body>
     <div id="header"> The Dog Breeds Website </div>
-    <nav id="navigation">
-      <a href="/dogbreedsinfo.html"> About us </a>
-      <a href="/dogfood.html"> Sweet Treats for your dog </a>
-      <a href="/doghistory.html"> A history of human / dog friendship </a>
-      <a href="/dogfacts.html"> Random dog facts </a>
-    </nav>
+    <div class="navigation">
+    <div class="navLeft"></div>
+    <div class="navMiddle">
+    <ul>
+        <li id="active"><a href="index.html">Home</a></li>
+        <li><a href="info.html">Info</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="contactus.html">Contact Us</a></li>
+    </ul>
+    </div>
+    <div class="navRight"></div>
+    </div>
     
     <h3> The Bernese Mountain Dogs </h3>
     <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
