--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -4,6 +4,7 @@
   <head>
     <title> Dog Breeds </title>
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
+    <link rel="stylesheet" type="css" href="/style.css" />
   </head>
   <body>
     <div id="header"> The Dog Breeds Website </div>
