--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,18 +7,14 @@
     <link rel="stylesheet" type="css" href="/style.css" />
   </head>
   <body>
-    <div id="header"> The Dog Breeds Website </div>
-    <div class="navigation">
-    <div class="navLeft"></div>
-    <div class="navMiddle">
-    <ul>
-        <li id="active"><a href="index.html">Home</a></li>
-        <li><a href="info.html">Info</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="contactus.html">Contact Us</a></li>
-    </ul>
-    </div>
-    <div class="navRight"></div>
+    <div id="header">
+      <div id="title> The Dog Breeds Website </div>
+      <div id="navigation">
+        <a href="/aboutus.html> About us. </a>
+        <a href="/dogfood.html> Sweet Treats for your dog. </a>
+        <a href="/doghistory.html> A history of man / dog friendship. </a>
+        <a href="/dogfact.html> Random dog facts. </a>
+      </div>
     </div>
     
     <h3> The Bernese Mountain Dogs </h3>
