--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -15,11 +15,13 @@
         <a href="/dogfact.html> Random dog facts. </a>
     </div>
     
-    <h3> The Bernese Mountain Dogs </h3>
+    <h3> The Bernese Mountain Dog </h3>
     <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
         The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog"). </br>
         These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts. </br>
     </p>
     
+    <h3> Border Collie </h3>
+    <p> The Border Collie is a loyal farm dog </p>
   </body>
 </html>
