--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="css" href="/style.css" />
   </head>
   <body>
-    <div id="title> The Dog Breeds Website </div>
-    <div id="navigation">
+    <div id="title"> The Dog Breeds Website </div>
+    <pre id="navigation">
         <a href="/aboutus.html> About us. </a>
         <a href="/dogfood.html> Sweet Treats for your dog. </a>
         <a href="/doghistory.html> A history of man / dog friendship. </a>
         <a href="/dogfact.html> Random dog facts. </a>
-    </div>
+    </pre>
     
     <h3> The Bernese Mountain Dog </h3>
     <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
