--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -9,10 +9,10 @@
   <body>
     <div id="title"> The Dog Breeds Website </div>
     <pre id="navigation">
-        <a href="/aboutus.html> About us. </a>
-        <a href="/dogfood.html> Sweet Treats for your dog. </a>
-        <a href="/doghistory.html> A history of man / dog friendship. </a>
-        <a href="/dogfact.html> Random dog facts. </a>
+        <a href="/aboutus.htm"l> About us. </a>
+        <a href="/dogfood.html"> Sweet Treats for your dog. </a>
+        <a href="/doghistory.html"> A history of man / dog friendship. </a>
+        <a href="/dogfact.html"> Random dog facts. </a>
     </pre>
     
     <h3> The Bernese Mountain Dog </h3>
