--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="css" href="/style.css" />
   </head>
   <body>
-    <div id="title"> The Dog Breeds Website </div>
-    <pre id="navigation">
+    <div id="title"> The Dog Breeds Website 
         <a href="/aboutus.htm"l>About us</a>
         <a href="/dogfood.html">Sweet Treats for your dog</a>
         <a href="/doghistory.html">A history of man / dog friendship</a>
         <a href="/dogfact.html">Random dog facts</a>
-    </pre>
+    </div>
+    
     
     <h3> The Bernese Mountain Dog </h3>
     <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
