--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="css" href="/style.css" />
   </head>
   <body>
-    <div id="title"> The Dog Breeds Website 
+    <div id="title"> <span id="title">The Dog Breeds Website </span>
         <a href="/aboutus.htm"l>About us |</a>
         <a href="/dogfood.html"> Sweet Treats for your dog |</a>
         <a href="/doghistory.html"> A history of man / dog friendship |</a>
