--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -4,7 +4,7 @@
   <head>
     <title> Dog Breeds </title>
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
-    <link rel="stylesheet" type="css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
     <div id="title"> <span id="title">The Dog Breeds Website </span>
