--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -22,6 +22,9 @@
     </p>
     
     <h3> Border Collie </h3>
-    <p> The Border Collie is a loyal farm dog </p>
+    <p> The Border Collie is a working and herding dog breed developed in the Anglo-Scottish border region. </br> 
+        These dogs were for herding livestock, especially sheep. They were specifically bred for intelligence and obedience. </br>
+        Border collies are considered highly intelligent, extremely energetic, acrobatic and athletic. </br>
+    </p>
   </body>
 </html>
