--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
-    <div id="title"> <span id="title">The Dog Breeds Website    </span>
-        <a href="/aboutus.htm"l> About us | </a>
-        <a href="/dogfood.html"> Sweet Treats for your dog | </a>
-        <a href="/doghistory.html"> A history of man / dog friendship | </a>
+    <div id="title"> <span id="title">The Dog Breeds Website</span>
+        <a href="/aboutus.htm"l> About us |</a>
+        <a href="/dogfood.html"> Sweet Treats for your dog |</a>
+        <a href="/doghistory.html"> A history of man / dog friendship |</a>
         <a href="/dogfact.html"> Random dog facts</a>
     </div>
     
@@ -25,6 +25,12 @@
     <p> The Border Collie is a working and herding dog breed developed in the Anglo-Scottish border region. </br> 
         These dogs were for herding livestock, especially sheep. They were specifically bred for intelligence and obedience. </br>
         Border collies are considered highly intelligent, extremely energetic, acrobatic and athletic. </br>
+    </p>
+
+    <h3> Alaskan Malamute </h3>
+    <p> The Alaskan Malamute is a large breed of domestic dog (Canis lupus familiaris). </br>
+        Originally bred for hauling heavy freight due to their strength and endurance. </br>
+        They are similar to other arctic breeds, such as the Greenland Dog or the Canadian Eskimo Dog. </br>
     </p>
   </body>
 </html>
