--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div id="title"> <span id="title">The Dog Breeds Website</span>
-        <a href="/aboutus.htm"l> About us |</a>
-        <a href="/dogfood.html"> Sweet Treats for your dog |</a>
-        <a href="/doghistory.html"> A history of man / dog friendship |</a>
+        <a href="/aboutus.htm"l> About us </a>
+        <a href="/dogfood.html"> Sweet Treats for your dog </a>
+        <a href="/doghistory.html"> A history of man / dog friendship </a>
         <a href="/dogfact.html"> Random dog facts</a>
     </div>
     
