--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -20,6 +20,7 @@
           The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog"). </br>
           These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts. </br>
       </p>
+      <img src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
     </div>
     <div id="border_collie">
       <h3> Border Collie </h3>
@@ -27,6 +28,7 @@
           These dogs were for herding livestock, especially sheep. They were specifically bred for intelligence and obedience. </br>
           Border collies are considered highly intelligent, extremely energetic, acrobatic and athletic. </br>
       </p>
+      <img src="/img/border_collie.jpg" alt="Border Collie" />
     </div>
     <div id="alaskan_malamute">
       <h3> Alaskan Malamute </h3>
@@ -34,6 +36,7 @@
           Originally bred for hauling heavy freight due to their strength and endurance. </br>
           They are similar to other arctic breeds, such as the Greenland Dog or the Canadian Eskimo Dog. </br>
       </p>
+      <img src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
   </div>
   </body>
 </html>
