--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title> Dog Breeds </title>
-    <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
+    <link rel="icon" type="image/png" href="/dogfaviconv2.png" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
