--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -3,10 +3,11 @@
 <html>
   <head>
     <title> Dog Breeds </title>
-    <link rel="icon" type="image/png" href="/dogfaviconv2.png" />
+    <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
+    <img src="/dogfaviconv2.png" alt="The Dog Breed Website Logo" />
     <div id="title"> <span id="title">The Dog Breeds Website</span>
         <a href="/aboutus.htm"l> About us </a>
         <a href="/dogfood.html"> Sweet Treats for your dog </a>
