--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -39,7 +39,14 @@
           They are similar to other arctic breeds, such as the Greenland Dog or the Canadian Eskimo Dog. </br>
       </p>
     </div>
-      <img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
-  
+    <img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
+    <div id="golden">
+      <h3> Golden Retriever</h3>
+      <p> The Golden Retriever is a large-sized breed of dog bred as gun dogs to retrieve shot waterfowl. </br>
+          They were named 'retriever' because of their ability to retrieve shot game undamaged (soft mouth). </br> 
+          Golden Retrievers have an instinctive love of water, and are easy to train to basic or advanced obedience standards. </br>
+      </p>
+    </div>
+    <img id="golden_retriever" src="/img/golden_retriever.jpeg" alt="Golden Retriever" />
   </body>
 </html>
