--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -47,6 +47,6 @@
           Golden Retrievers have an instinctive love of water, and are easy to train to basic or advanced obedience standards. </br>
       </p>
     </div>
-    <img id="golden_retriever" src="/img/golden_retriever.jpeg" alt="Golden Retriever" />
+    <img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
   </body>
 </html>
