--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -48,5 +48,14 @@
       </p>
     </div>
     <img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
+    <div id="shetland">
+      <h3> Shetland Sheepdog </h3>
+      <p> The Shetland Sheepdog, also known as the Sheltie, is a breed of herding dog that originated in the Shetland Islands. </br> 
+          The original name of this breed was Shetland Collie, but the breed's name was formally changed to Shetland Sheepdog. </br>
+          This hard-working small dog is intelligent, vocal, excitable and willing to please. </br>
+          They are incredibly loyal to their owners and are often referred to as "shadows" due to their attachment to family. </br>
+      </p>
+    </div>
+    <img id="shetland_sheepdog" src="/img/shetland_sheepdog.jpg" alt="Shetland Sheepdog" />
   </body>
 </html>
