--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -19,6 +19,7 @@
       <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
           The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog"). </br>
           These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts. </br>
+          This mountain dog was originally kept as a general farm dog in the canton of bern in Switzerland. </br>
       </p>
     </div> 
       <img id="bernese_mountain" src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
@@ -28,6 +29,7 @@
       <p> The Border Collie is a working and herding dog breed developed in the Anglo-Scottish border region. </br> 
           These dogs were for herding livestock, especially sheep. They were specifically bred for intelligence and obedience. </br>
           Border collies are considered highly intelligent, extremely energetic, acrobatic and athletic. </br>
+          Border Collies continue to be employed in their traditional work of herding livestock throughout the world. </br>
       </p>
     </div>
       <img id="border_collie" src="/img/border_collie.jpg" alt="Border Collie" />
@@ -37,6 +39,7 @@
       <p> The Alaskan Malamute is a large breed of domestic dog (Canis lupus familiaris). </br>
           Originally bred for hauling heavy freight due to their strength and endurance. </br>
           They are similar to other arctic breeds, such as the Greenland Dog or the Canadian Eskimo Dog. </br>
+        The coat of the Alaskan Malamute is a double coat. The undercoat has an oily and woolly texture. </br>
       </p>
     </div>
     <img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
@@ -45,6 +48,7 @@
       <p> The Golden Retriever is a large-sized breed of dog bred as gun dogs to retrieve shot waterfowl. </br>
           They were named 'retriever' because of their ability to retrieve shot game undamaged (soft mouth). </br> 
           Golden Retrievers have an instinctive love of water, and are easy to train to basic or advanced obedience standards. </br>
+          They are a long-coated breed, with a dense inner coat that provides them with adequate warmth in the outdoors. </br>
       </p>
     </div>
     <img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
