--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -22,7 +22,7 @@
           This mountain dog was originally kept as a general farm dog in the canton of bern in Switzerland. </br>
       </p>
     </div> 
-      <img id="bernese_mountain" src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
+    <br><img id="bernese_mountain" src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
     
     <div id="border">
       <h3> Border Collie </h3>
