--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -32,7 +32,7 @@
           Border Collies continue to be employed in their traditional work of herding livestock throughout the world. </br>
       </p>
     </div>
-      <img id="border_collie" src="/img/border_collie.jpg" alt="Border Collie" />
+    <br><img id="border_collie" src="/img/border_collie.jpg" alt="Border Collie" />
     
     <div id="malamute">
       <h3> Alaskan Malamute </h3>
@@ -42,7 +42,8 @@
         The coat of the Alaskan Malamute is a double coat. The undercoat has an oily and woolly texture. </br>
       </p>
     </div>
-    <img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
+    <br><img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
+
     <div id="golden">
       <h3> Golden Retriever</h3>
       <p> The Golden Retriever is a large-sized breed of dog bred as gun dogs to retrieve shot waterfowl. </br>
@@ -51,7 +52,8 @@
           They are a long-coated breed, with a dense inner coat that provides them with adequate warmth in the outdoors. </br>
       </p>
     </div>
-    <img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
+    <br><img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
+
     <div id="shetland">
       <h3> Shetland Sheepdog </h3>
       <p> The Shetland Sheepdog, also known as the Sheltie, is a breed of herding dog that originated in the Shetland Islands. </br> 
@@ -60,6 +62,6 @@
           They are incredibly loyal to their owners and are often referred to as "shadows" due to their attachment to family. </br>
       </p>
     </div>
-    <img id="shetland_sheepdog" src="/img/shetland_sheepdog.jpg" alt="Shetland Sheepdog" />
+    <br><img id="shetland_sheepdog" src="/img/shetland_sheepdog.jpg" alt="Shetland Sheepdog" />
   </body>
 </html>
