--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -12,8 +12,8 @@
         <a href="/dogfood.html"> Sweet Treats for your dog </a>
         <a href="/doghistory.html"> A history of man / dog friendship </a>
         <a href="/dogfact.html"> Random dog facts</a>
-    </div>
-    </br>
+    </div></br>
+  
     <div id="bernese">
       <h3> The Bernese Mountain Dog </h3>
       <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
@@ -22,7 +22,7 @@
           This mountain dog was originally kept as a general farm dog in the canton of bern in Switzerland. </br>
       </p>
     </div> 
-    <br><img id="bernese_mountain" src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
+    <br/><img id="bernese_mountain" src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
     
     <div id="border">
       <h3> Border Collie </h3>
@@ -32,7 +32,7 @@
           Border Collies continue to be employed in their traditional work of herding livestock throughout the world. </br>
       </p>
     </div>
-    <br><img id="border_collie" src="/img/border_collie.jpg" alt="Border Collie" />
+    <br/><img id="border_collie" src="/img/border_collie.jpg" alt="Border Collie" />
     
     <div id="malamute">
       <h3> Alaskan Malamute </h3>
@@ -42,7 +42,7 @@
         The coat of the Alaskan Malamute is a double coat. The undercoat has an oily and woolly texture. </br>
       </p>
     </div>
-    <br><img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
+    <br/><img id="alaskan_malamute" src="/img/alaskan_malamute.jpg" alt="Alaskan Malamute" />
 
     <div id="golden">
       <h3> Golden Retriever</h3>
@@ -52,7 +52,7 @@
           They are a long-coated breed, with a dense inner coat that provides them with adequate warmth in the outdoors. </br>
       </p>
     </div>
-    <br><img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
+    <br/><img id="golden_retriever" src="/img/golden_retriever.jpg" alt="Golden Retriever" />
 
     <div id="shetland">
       <h3> Shetland Sheepdog </h3>
@@ -62,6 +62,6 @@
           They are incredibly loyal to their owners and are often referred to as "shadows" due to their attachment to family. </br>
       </p>
     </div>
-    <br><img id="shetland_sheepdog" src="/img/shetland_sheepdog.jpg" alt="Shetland Sheepdog" />
+    <br/><img id="shetland_sheepdog" src="/img/shetland_sheepdog.jpg" alt="Shetland Sheepdog" />
   </body>
 </html>
