--- a/dogfact.html
+++ b/dogfact.html
@@ -2,6 +2,7 @@
   <head>
     <title> Random Dog Facts - The Dog Breed Website </title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
     <pre id="click" style="text-align:center"> Click for a random Dog Fact !</pre>
