--- a/dogfact.html
+++ b/dogfact.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
+    <pre id="nav"> Homepage | About Us | Sweet Treats for your dog | A history of man / dog friendship </pre>
+    
     <pre id="click" style="text-align:center"> Click for a random Dog Fact !</pre>
     <br>
     <pre id="dogfact" style="text-align:center"> </pre>
