--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
-    <div id="title"> <span id="title">The Dog Breeds Website</span>
-        <a href="/aboutus.html"> About us </a>
-        <a href="/dogfood.html"> Sweet Treats for your dog </a>
-        <a href="/doghistory.html"> A history of man / dog friendship </a>
-        <a href="/dogfact.html"> Random dog facts</a>
+    <div id="title"> <span id="title">The Dog Breeds Website</span> <a href="/aboutus.html">About us</a> | <a href="/dogfood.html"> Sweet Treats for your dog </a> | <a href="/doghistory.html"> A history of man / dog friendship </a> | <a href="/dogfact.html"> Random dog facts</a>
     </div></br>
   
     <div id="bernese">
