--- a/aboutus.html
+++ b/aboutus.html
@@ -3,9 +3,8 @@
   
   </head>
   <body>
-    <h1> About us </h1><br>
-    <img src="/dogfaviconv2.png" alt="The Dog Breeds Website Logo" />
+    <pre id="nav" style="text-align: center"> <a href="/dogbreeds.html">Homepage</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> | <a href="dogfact.html">Random dog facts</a> </pre>
     
-    <p>[<strong>Content Unavailable - Server Error 503</strong>]</p>
+    <pre style="font-size: 20px; text-align:center"> About us </pre>
   </body>
 </html>
