--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
-    <div id="title"> <span id="title">The Dog Breeds Website</span> <a href="/aboutus.html">About us</a> | <a href="/dogfood.html"> Sweet Treats for your dog </a> | <a href="/doghistory.html"> A history of man / dog friendship </a> | <a href="/dogfact.html"> Random dog facts</a>
-    </div></br>
+    <span id="title">The Dog Breeds Website</span><pre> <a href="/aboutus.html">About us</a> | <a href="/dogfood.html"> Sweet Treats for your dog </a> | <a href="/doghistory.html"> A history of man / dog friendship </a> | <a href="/dogfact.html"> Random dog facts</a></pre>
+    </br>
   
     <div id="bernese">
       <h3> The Bernese Mountain Dog </h3>
