--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
-    <pre id="title">The Dog Breeds Website</pre>
+    <span id="title">The Dog Breeds Website</span>
     <pre style="text-align:center"> <a href="/aboutus.html">About us</a> | <a href="/dogfood.html">Sweet Treats for your dog</a> | <a href="/doghistory.html">A history of man / dog friendship</a> | <a href="/dogfact.html">Random dog facts</a></pre>
     </br>
   
