--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <pre style="text-align:center"> <a href="/aboutus.html">About us</a> | <a href="/dogfood.html">Sweet Treats for your dog</a> | <a href="/doghistory.html">A history of man / dog friendship</a> | <a href="/dogfact.html">Random dog facts</a></pre>
-    <pre id="title"> The Dog Breeds Website </pre>
+
+      <pre id="title" style="display:inline"> The Dog Breeds Website </pre>
     </br>
   
     <div id="bernese">
