--- a/dogbreeds.html
+++ b/dogbreeds.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <pre style="text-align:center"> <a href="/aboutus.html">About us</a> | <a href="/dogfood.html">Sweet Treats for your dog</a> | <a href="/doghistory.html">A history of man / dog friendship</a> | <a href="/dogfact.html">Random dog facts</a></pre>
-
+    <div style="text-align:center">
       <pre id="title" style="display:inline"> The Dog Breeds Website </pre>
+    </div>
     </br>
   
     <div id="bernese">
