--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>About us - The Dog Breeds Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <pre id="nav" style="text-align: center"> <a href="/dogbreeds.html">Homepage</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> | <a href="dogfact.html">Random dog facts</a> </pre>
