--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <br><pre id="nav" style="text-align: center"> <a href="/dogbreeds.html">Homepage</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> | <a href="dogfact.html">Random dog facts</a> </pre>
+    <pre id="nav" style="text-align: center"> <a href="/dogbreeds.html">Homepage</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> | <a href="dogfact.html">Random dog facts</a> </pre>
     
     <pre style="font-size: 20px; text-align:center"> About us </pre>
   </body>
