--- a/dogfact.html
+++ b/dogfact.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
-    <br><pre id="nav" style="text-align: center"> <a href="/dogbreeds.html">Homepage</a> | <a href="aboutus.html">About Us</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> </pre>
+    <pre id="nav" style="text-align: center"> <a href="/dogbreeds.html">Homepage</a> | <a href="aboutus.html">About Us</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> </pre>
     
     <pre id="click" style="text-align:center; font-size:20px">Click for a random Dog Fact !</pre>
     <br>
