--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>About us - The Dog Breeds Website</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title> About us - The Dog Breeds Website </title>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
-    <pre id="nav"> <a href="/dogbreeds.html">Homepage</a> | <a href="dogfood.html">Sweet Treats for your dog</a> | <a href="doghistory.html">A history of man / dog friendship</a> | <a href="dogfact.html">Random dog facts</a> </pre>
-    
-    <pre id="header"> About us </pre>
+    <pre id="nav"> <a href="dogbreeds.html">Homepage</a> | <a href="/aboutus.html">About us</a> | <a href="/doghistory.html">A history of man / dog friendship</a> | <a href="/dogfact.html">Random dog facts</a></pre>
   </body>
 </html>
