--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -6,6 +6,6 @@
      <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
   </head>
   <body>
-    <pre id="nav"> <a href="dogbreeds.html">Homepage</a> | <a href="/aboutus.html">About us</a> | <a href="/doghistory.html">A history of man / dog friendship</a> | <a href="/dogfact.html">Random dog facts</a></pre>
+    <pre id="nav"> <a href="index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
   </body>
 </html>
