--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -3,7 +3,7 @@
   <head>
     <title> The history of dog and human friendship </title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
+    <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
      <pre id="nav"> <a href="index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
