--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -3,7 +3,7 @@
   <head>
     <title> Random Dog Facts - The Dog Breed Website </title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
+    <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
     <pre id="nav" style="text-align: center"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About Us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> </pre>
