--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -3,7 +3,7 @@
   <head>
     <title> About us - The Dog Breeds Website </title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-     <link rel="icon" type="image/png" href="/dogfavicon.jpg" />
+     <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
     <pre id="nav"> <a href="index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
