--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -6,6 +6,6 @@
      <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
-    <pre id="nav"> <a href="index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
   </body>
 </html>
