--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -11,6 +11,6 @@
     <pre id="click" style="text-align:center; font-size:20px">Click for a random Dog Fact !</pre>
     <br>
     <pre id="dogfact" style="text-align:center"> </pre>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
