--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -6,11 +6,11 @@
     <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
-    <pre id="nav" style="text-align: center"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About Us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> </pre>
+    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About Us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> </pre>
     
-    <pre id="click" style="text-align:center; font-size:20px">Click for a random Dog Fact !</pre>
+    <pre id="click">Click for a random Dog Fact !</pre>
     <br>
-    <pre id="dogfact" style="text-align:center"> </pre>
+    <pre id="dogfact"> </pre>
     <script src="/script.js"></script>
   </body>
 </html>
