--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
      <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
-  <body>
+  <body style="background: url('/img/dogimage.jpg')">
     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    
+    <pre id="header">About us</pre>
+    <pre id="content">Look, I don't know what to put on this page so this is going here instead</pre>
   </body>
 </html>
