--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -6,7 +6,7 @@
      <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body style="background: url('/img/dogimage.jpg')">
-    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    <pre id="nav" style="background-color:white"> <a href="/index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     
     <pre id="header">About us</pre>
     <pre id="content">Look, I don't know what to put on this page so this is going here instead</pre>
