--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -12,5 +12,8 @@
     
     <pre id="header">About us</pre>
     <pre id="content">Look, I don't know what to put on this page so this is going here instead</pre>
+    <pre id="content">Who can say no to adorable little shibas?</pre>
+    <pre id="content">Im just a web dev trying to make an interesting Website.</pre>
+    
   </body>
 </html>
