--- a/rpg/index.html
+++ b/rpg/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css" type="text/css"/>
-		<link rel="icon" href="favicon.png" type="img"/>
+		<link rel="stylesheet" href="style.css" type="text/css" />
+		 <link rel="icon" type="image/x-icon" href="favicon.png" />
 		<title>Life - RPG</title>
 	</head>
 	<body>
 		<div id="text">
-		Life rpg
+
 		</div>
 		<div id="inventory">
 		
