--- a/rpg/index.html
+++ b/rpg/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="text">
-
+			<pre id="one"><pre class="red bold">Hello</pre>, traveller</pre>
 		</div>
 		<div id="inventory">
 		
