--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,7 +7,7 @@
   </head>
   <body style="background: url('/img/dogimage.jpg')">
 
-    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/aboutus.html" style="text-decoration:underline;">About Us</a>| <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     
     
     <pre id="header">About us</pre>
