--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
-    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About Us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> </pre>
+    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About Us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="html/dogfact.html" style="font-style:italic;">Random dog facts</a> </pre>
     
     <pre id="click">Click for a random Dog Fact !</pre>
     <br>
