--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
      <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
-  <body style="background: url('/img/dogimage.jpg')">
+  <body>
 
     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html" style="font-style: italic">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     
