--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -15,5 +15,7 @@
     <pre id="content">Who can say no to adorable little shibas?</pre>
     <pre id="content">Im just a web dev trying to make an interesting Website.</pre>
     
+    <img width="200px" height="200px" src="" alt="Cute dog"></img>
+    
   </body>
 </html>
