--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -15,7 +15,7 @@
     <pre id="content">Who can say no to adorable little shibas?</pre>
     <pre id="content">Im just a web dev trying to make an interesting Website.</pre>
     
-    <img width="200px" height="200px" src="" alt="Cute dog"></img>
+    <img width="150%" height="150%" src="/img/dogimage.jpg" alt="Cute dog">
     
   </body>
 </html>
