--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -15,7 +15,7 @@
     <pre id="content">Who can say no to adorable little shibas?</pre>
     <pre id="content">Im just a web dev trying to make an interesting Website.</pre>
     
-    <img width="50%" height="50%" src="/img/dogimage.jpg" alt="Cute dog">
+    <img width="50%" height="50%" src="/img/dogimage.jpg" alt="Cute dog" class="center">
     
   </body>
 </html>
