--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -21,10 +21,10 @@
     </div>
     
     <div id="dangerous_food">
-      A number of common human foods and household ingestibles are toxic to dog.<br>
-      These include chocolate solids (theobromine poisoning), onion and garlic (thiosulfate, sulfoxide or disulfide poisoning).<br>
-      Grapes and raisins (cause kidney failure in dogs), milk (some dogs are lactose intolerant and suffer diarrhea, goats' milk can be beneficial).<br>
-      Nutmeg (neurotoxic to dogs), macadamia nuts, as well as various plants and other potentially ingested materials.
+      <pre>A number of common human foods and household ingestibles are toxic to dog.<br></pre>
+      <pre>These include chocolate solids (theobromine poisoning), onion and garlic (thiosulfate, sulfoxide or disulfide poisoning).<br></pre>
+      <pre>Grapes and raisins (cause kidney failure in dogs), milk (some dogs are lactose intolerant and suffer diarrhea, goats' milk can be beneficial).<br></pre>
+      <pre>Nutmeg (neurotoxic to dogs), macadamia nuts, as well as various plants and other potentially ingested materials.</pre>
     </div>
   </body>
 </html>
