--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -21,9 +21,9 @@
     </div>
     
     <div id="dangerous_food">
-      <pre>A number of common human foods and household ingestibles are toxic to dog.<br></pre>
-      <pre>These include chocolate solids (theobromine poisoning), onion and garlic (thiosulfate, sulfoxide or disulfide poisoning).<br></pre>
-      <pre>Grapes and raisins (cause kidney failure in dogs), milk (some dogs are lactose intolerant and suffer diarrhea, goats' milk can be beneficial).<br></pre>
+      <pre>A number of common human foods and household ingestibles are toxic to dog.</pre>
+      <pre>These include chocolate solids (theobromine poisoning), onion and garlic (thiosulfate, sulfoxide or disulfide poisoning).</pre>
+      <pre>Grapes and raisins (cause kidney failure in dogs), milk (some dogs are lactose intolerant and suffer diarrhea, goats' milk can be beneficial).</pre>
       <pre>Nutmeg (neurotoxic to dogs), macadamia nuts, as well as various plants and other potentially ingested materials.</pre>
     </div>
   </body>
