--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
-    <pre style="text-align:center"> <a href="/index.html" style="font-style:italic;">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    <pre style="text-align:center"> <a href="/index.html" style="background-color:black; color:white">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     <div style="text-align:center">
       <pre id="title" style="display:inline"> The Dog Breeds Website </pre>
     </div>
-    </br>
+    <br>
   
     <div id="bernese">
       <h3> The Bernese Mountain Dog </h3>
-      <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. </br>
-          The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog"). </br>
-          These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts. </br>
-          This mountain dog was originally kept as a general farm dog in the canton of bern in Switzerland. </br>
+      <p> The <i>Bernese Mountain Dog</i>, one of four Sennenhund-type breeds from the swiss alps. <br>
+          The name Sennenhund is derived from the German Senne ("alpine pasture") and Hund ("dog"). <br>
+          These dogs were originally kept as farm dogs. They were also someetimes used as draft animals for pulling carts. <br>
+          This mountain dog was originally kept as a general farm dog in the canton of bern in Switzerland. <br>
       </p>
     </div> 
     <br/><img id="bernese_mountain" src="/img/bernese_mountain_dog.jpg" alt="Bernese Mountain Dog" />
