Added currentPage class for easier navigation

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html" style="font-style: italic">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html" class="currentPage">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     
     
     <pre id="header">About us</pre>
