--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -6,7 +6,7 @@
      <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
-    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html" style="font-style:italic">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+    <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html" class="currentPage">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
   
     <div id="bones">
           
