--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -6,6 +6,6 @@
     <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
   </head>
   <body>
-     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html" style="font-style:italic;">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
+     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html" class="currentPage">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
   </body>
 </html>
