--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <pre style="text-align:center"> <a href="/index.html" class="currentPage">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     <div style="text-align:center">
-      <pre id="title" style="display:inline"> The Dog Breeds Website commit test</pre>
+      <pre id="title" style="display:inline"> The Dog Breeds Website </pre>
     </div>
     <br>
   
