--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -10,7 +10,7 @@
     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html" class="currentPage">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     
     <div style="text-align:center">
-      <pre id="header">About us</pre>
+      <pre id="title">About us</pre>
     </div>
     <pre id="content">Look, I don't know what to put on this page so this is going here instead</pre>
     <pre id="content">Who can say no to adorable little shibas?</pre>
