--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -8,7 +8,7 @@
   <body>
     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html" class="currentPage">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
     <div style="text-align:center">
-      <pre id="title"> Sweet Treats for your dog </pre>
+      <pre id="title" style="display:inline"> Sweet Treats for your dog </pre>
     </div>
       
     <div id="bones">
