--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -12,7 +12,10 @@
     </div>
       
     <div id="bones">
-        Bones have been a classic food for dogs since the old ages. <br>They are full of calcium and nutrients and can be very benifitial to a dogs diet. <br>Whole chickens or chicken portions, whole rabbits, and meaty beef or lamb ribs are popular ways to feed bones to dogs. 
+      <h2 id="header">Bones</h2>
+        Bones have been a classic food for dogs since the old ages. <br>
+        They are full of calcium and nutrients and can be very benifitial to a dogs diet. <br>
+        Whole chickens or chicken portions, whole rabbits, and meaty beef or lamb ribs are popular ways to feed bones to dogs. 
     </div>
     
     <div id="wet_food">
