--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -13,9 +13,9 @@
       
     <div id="bones">
       <h2 id="header">Bones</h2>
-        Bones have been a classic food for dogs since the old ages. <br>
-        They are full of calcium and nutrients and can be very benifitial to a dogs diet. <br>
-        Whole chickens or chicken portions, whole rabbits, and meaty beef or lamb ribs are popular ways to feed bones to dogs. 
+      <pre>Bones have been a classic food for dogs since the old ages. <br></pre>
+        <pre>They are full of calcium and nutrients and can be very benifitial to a dogs diet. <br></pre>
+        <pre>Whole chickens or chicken portions, whole rabbits, and meaty beef or lamb ribs are popular ways to feed bones to dogs. </pre>
     </div>
     
     <div id="wet_food">
