--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <title> Dog Breeds </title>
     <link rel="icon" type="image/png" href="/img/dogfavicon.jpg" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <style>
+      #hoverEffect {
+        transition: transform 500ms;
+      }
+      
+      #hoverEffect {
+        transform: translate3d(1,1,1,360deg);
+      }
+    </style>
   </head>
   <body>
     <pre style="text-align:center"> <a href="/index.html" class="currentPage">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
-    <div style="text-align:center">
+    <div style="text-align:center" id='hoverEffect'>
       <pre id="title" style="display:inline"> The Dog Breeds Website </pre>
     </div>
     <br>
