--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   </head>
   <body>
     <pre style="text-align:center"> <a href="/index.html" class="currentPage">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
-    <div style="text-align:center" id='hoverEffect'>
-      <pre id="title" style="display:inline"> The Dog Breeds Website </pre>
-    </div>
+    <pre id="title" style="display:inline-block"> The Dog Breeds Website </pre>
     <br>
   
     <div id="bernese">
