--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -8,7 +8,7 @@
   <body>
      <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html" class="currentPage">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
   
-    <div>
+    <div style="text-align:center">
       <pre id="title"> A history of man / dog friendship </pre>
     </div>
   </body>
