--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html" class="currentPage">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
-    <div>
+    <div style="text-align:center">
       <pre id="title"> Sweet Treats for your dog </pre>
     </div>
       
