--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
       </p>
     </div>
     <img id="shetland_sheepdog" src="/img/shetland_sheepdog.jpg" alt="Shetland Sheepdog" />
+
+    <script src="script.js"></script>
   </body>
 </html>
