--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -18,5 +18,6 @@
     
     <img width="50%" height="50%" src="/img/dogimage.jpg" alt="Cute dog" class="center">
     
+    <script src="script.js"></script>
   </body>
 </html>
