--- a/html/dogfood.html
+++ b/html/dogfood.html
@@ -40,5 +40,7 @@
       Grapes and raisins (cause kidney failure in dogs), milk (some dogs are lactose intolerant and suffer diarrhea, goats' milk can be beneficial).<br>
       Nutmeg (neurotoxic to dogs), macadamia nuts, as well as various plants and other potentially ingested materials.
     </div>
+    
+    <script src="script.js"></script>
   </body>
 </html>
