--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -11,5 +11,7 @@
     <div style="text-align:center">
       <pre id="title"> A history of man / dog friendship </pre>
     </div>
+    
+    <script src="script.js"></script>
   </body>
 </html>
