--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -30,6 +30,10 @@
        Prof Savolainen, of the Royal Institute of Technology, Solna, Sweden, said this indicates "an ancient origin of domestic dogs in southern East Asia 33,000 years ago."<br><br>
     </div>
     
+    <div id="images">
+      <img src="/img/watermelon dog.jpg" width="120%" height="120%" alt="Cute Watermelon Dog"/>
+    </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
