--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -31,7 +31,7 @@
     </div>
     
     <div id="images">
-      <img src="/img/watermelon dog.jpg" width="120%" height="120%" alt="Cute Watermelon Dog"/>
+      <img src="/img/watermelon dog.jpg" width="1fr" height="60%" alt="Cute Watermelon Dog"/>
     </div>
     
     <script src="script.js"></script>
