--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     window.setTimeout(toggle=0,1000)
   }
 }
-    </script>
+	</script>
+	<style>
+		.rotate {transform: rotate3d(1,1,1,360deg)}  
+	</style>
   </head>
   <body>
     <pre style="text-align:center"> <a href="/index.html" class="currentPage">Homepage</a> | <a href="/html/aboutus.html">About us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html">Random dog facts</a></pre>
