--- a/html/doghistory.html
+++ b/html/doghistory.html
@@ -13,21 +13,21 @@
     </div>
     
     <div> 
-      Man's best friend came about after generations of wolves scavenged alongside humans more than 33,000 years ago in south east Asia, according to new research.<br><br>
+      Man's best friend came about after generations of wolves scavenged alongside humans more than 33,000 years ago in south east Asia, according to new research.<br>
 
-      Dogs became self-domesticated as they slowly evolved from wolves who joined humans in the hunt, according to the first study of dog genomes.<br><br>
+      Dogs became self-domesticated as they slowly evolved from wolves who joined humans in the hunt, according to the first study of dog genomes.<br>
 
-      And it shows that the first domesticated dogs came about 33,000 years ago and migrated to Europe, rather than descending from domesticated European wolves 10,000 years ago as had previously been thought.<br><br>
+      And it shows that the first domesticated dogs came about 33,000 years ago and migrated to Europe, rather than descending from domesticated European wolves 10,000 years ago as had previously been thought.<br>
 
-      Scientists have long puzzled over how man's best friend came into existence but there is conflicting evidence on when and where wild wolves were first tamed.<br><br>
+      Scientists have long puzzled over how man's best friend came into existence but there is conflicting evidence on when and where wild wolves were first tamed.<br>
     </div>
     <br><br>
     <div> 
        So in one of the largest studies of its kind Professor Peter Savolainen and colleagues sequenced the genomes of 58 members of the dog family including grey wolves, indigenous dogs from south-east and north-east Asia, village dogs from Nigeria, and a collection of breeds from the rest of the world, such as the Afghan Hound and Siberian Husky.<br><br>
 
-       The DNA analysis published in Cell Research found those from south-east Asia had a higher degree of genetic diversity, and were most closely related to grey wolves from which domestic dogs evolved.<br><br>
+       The DNA analysis published in Cell Research found those from south-east Asia had a higher degree of genetic diversity, and were most closely related to grey wolves from which domestic dogs evolved.<br>
 
-       Prof Savolainen, of the Royal Institute of Technology, Solna, Sweden, said this indicates "an ancient origin of domestic dogs in southern East Asia 33,000 years ago."<br><br>
+       Prof Savolainen, of the Royal Institute of Technology, Solna, Sweden, said this indicates "an ancient origin of domestic dogs in southern East Asia 33,000 years ago."<br>
     </div>
     
     <div id="images">
