--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <pre id="nav"> <a href="/index.html">Homepage</a> | <a href="/html/aboutus.html">About Us</a> | <a href="/html/dogfood.html">Sweet Treats for your dog</a> | <a href="/html/doghistory.html">A history of man / dog friendship</a> | <a href="/html/dogfact.html" class="currentPage">Random dog facts</a> </pre>
-    
-    <pre id="click">Click for a random Dog Fact !</pre>
+    <div style="display: inline-block">
+      <pre id="click">Click for a random Dog Fact !</pre>
+    </div>
     <br>
     <pre id="dogfact"> </pre>
     <script src="/script.js"></script>
